# pic_sdcc

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: override.cmake
